[workspace]
members = [
    "adv_code_2015"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Tiago Ribeiro"]
description = "Advent of code"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
criterion = "0.5.1"