[package]
name = "adv_code_2015"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false