[package]
name = "adv_code_2015"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
rust-crypto = "0.2.36"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false